extras/k8s/gaia/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: gaia
  namespace: noty
  labels:
    app: gaia
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gaia
  template:
    metadata:
      labels:
        app: gaia
        name: gaia
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - image: notyim/gaia:${version}
        imagePullPolicy: Always
        name: gaia
        ports:
        - containerPort: 28300
          name: gaia
---
apiVersion: v1
kind: Service
metadata:
  name: gaia
  namespace: noty
spec:
  ports:
  - port: 80
    targetPort: gaia
    name: gaia
  selector:
    app: gaia

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "gaia-ingress"
  namespace: noty
spec:
  tls:
  - hosts:
    - laputa.noty.im
    secretName: tls
  rules:
  - host: "laputa.noty.im"
    http:
      paths:
      - path: /
        backend:
          serviceName: gaia
          servicePort: gaia
